--- a/index.html
+++ b/index.html
@@ -1,5 +1,63 @@
 <!doctype html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+
+  <!-- 🌐 Basic Meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Datta and Tayefi</title>
+  <meta name="title" content="Datta and Tayefi" />
+  <meta name="description" content="Datta & Tayefi is an international architecture and design studio delivering human-centered, purposeful, and timeless spaces. A legacy collaboration between Arup Datta Architects and MaxTayefi Architects under Mosaic Holding Corporation." />
+  <meta name="keywords" content="Datta and Tayefi, architecture, design studio, Arup Datta, Max Tayefi, Mosaic Holding Corporation, international architects, design excellence, sustainable architecture, global projects, civic design, commercial architecture" />
+  <meta name="author" content="Datta & Tayefi" />
+
+  <!-- 🖼️ Favicon -->
+  <link rel="icon" type="image/png" href="/datta-tayefi.ico" />
+  <link rel="apple-touch-icon" href="/datta-tayefi.ico" />
+
+  <!-- 🔗 Canonical -->
+  <link rel="canonical" href="https://www.dattatayefi.com" />
+
+  <!-- 💬 Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.dattatayefi.com/" />
+  <meta property="og:title" content="Datta and Tayefi" />
+  <meta property="og:description" content="An architecture and design studio crafting purposeful, human-centered, and timeless spaces across the globe." />
+  <meta property="og:image" content="https://www.dattatayefi.com/preview.jpg" />
+
+  <!-- 🐦 Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Datta and Tayefi" />
+  <meta name="twitter:description" content="Global architecture and design studio blending innovation with legacy." />
+  <meta name="twitter:image" content="https://www.dattatayefi.com/preview.jpg" />
+
+  <!-- 🏢 Schema.org Organization Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Datta and Tayefi",
+    "url": "https://www.dattatayefi.com",
+    "logo": "https://www.dattatayefi.com/logo.png",
+    "sameAs": [
+      "https://www.linkedin.com/company/datta-tayefi",
+      "https://www.instagram.com/datta.tayefi"
+    ]
+  }
+  </script>
+
+  <!-- 🧠 Default Vite Script -->
+  <script type="module" src="/src/main.jsx"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+</html>
+
+
+<!-- <!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,6 +69,7 @@
   <meta name="keywords"
     content="Datta & Tayefi , a subsidiary of Mosaic Holding Corporation, uniting two architectural legacies to design purposeful, intelligent, and enduring spaces worldwide.">
   <title>Datta and Tayefi</title>
+  <meta name="title" content="Datta and Tayefi" />
 </head>
 
 <body>
@@ -18,4 +77,4 @@
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
-</html>
+</html> -->
