--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+<meta name="google-site-verification" content="2nqi1F8oW9r13A65dEEg7b1ovjAwJsWE4ZHnn8Cw4D0" />
 
   <!-- 🌐 Basic Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
